<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.recyclerview.MovieAddActivity">


    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Year"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/cmbGender"
        android:layout_width="0dp"
        android:layout_height="49dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:text="Add"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cmbGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Movie"
        tools:layout_editor_absoluteX="242dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="29dp" />
</android.support.constraint.ConstraintLayout>
