<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="336dp"
        android:layout_height="18dp"
        android:text="TextView"
        tools:layout_editor_absoluteY="6dp"
        app:layout_constraintLeft_toRightOf="@+id/checkBox2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="244dp"
        android:layout_height="22dp"
        android:text="TextView"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/checkBox2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/year"
        android:layout_width="55dp"
        android:layout_height="19dp"
        android:text="TextView"
        tools:layout_editor_absoluteY="33dp"
        app:layout_constraintLeft_toRightOf="@+id/genre"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/title"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>